<resources>
    <string name="app_name">SmartGarden</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Household</string>
    <string name="nav_header_subtitle">Vestergade 12 3.th Horsens</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_valves">Valves</string>
    <string name="menu_switch_logs">Switch Logs</string>
    <string name="menu_scheduler_logs">Scheduler Logs</string>
    <string name="menu_scheduler">Scheduler</string>
    <string name="menu_settings">Settings</string>
    <string name="edit_valve">Edit valve</string>
    <string name="choose_icon">Choose icon</string>

    <string-array name="valves_array">
        <item>Valves</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>