<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.smartgarden.Fragments.HomeFragment"
        android:label="@string/menu_valves"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_switch_logs"
        android:name="com.example.smartgarden.Fragments.SwitchLogsFragment"
        android:label="@string/menu_switch_logs"
        tools:layout="@layout/switch_logs" />

    <fragment
        android:id="@+id/nav_scheduler_logs"
        android:name="com.example.smartgarden.Fragments.SchedulerLogs"
        android:label="@string/menu_scheduler_logs"
        tools:layout="@layout/fragment_scheduler_logs" />

    <fragment
        android:id="@+id/nav_scheduler"
        android:name="com.example.smartgarden.Fragments.SchedulerFragment"
        android:label="@string/menu_scheduler"
        tools:layout="@layout/fragment_scheduler" />
    <fragment
        android:id="@+id/editValve"
        android:name="com.example.smartgarden.Fragments.EditValve"
        android:label="@string/edit_valve"
        tools:layout="@layout/valve_edit" />

    <fragment
        android:id="@+id/editValveIcon"
        android:name="com.example.smartgarden.Fragments.EditValveIcon"
        android:label="@string/choose_icon"
        tools:layout="@layout/fragment_edit_valve_icon" />
</navigation>