<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/water_check"
            android:title="@string/menu_valves" />
        <item
            android:id="@+id/nav_switch_logs"
            android:icon="@drawable/baseline_list_24"
            android:title="@string/menu_switch_logs" />
        <item
            android:id="@+id/nav_scheduler"
            android:icon="@drawable/baseline_update_24"
            android:title="@string/menu_scheduler" />
        <item
            android:id="@+id/nav_scheduler_logs"
            android:icon="@drawable/baseline_fact_check_24"
            android:title="@string/menu_scheduler_logs" />
    </group>
</menu>